Closed Bug 1315686 Opened 8 years ago Closed 8 years ago

Possible name collision in UnsizedFormat enum class

Categories

(Core :: Graphics: CanvasWebGL, defect)

45 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox51 --- wontfix
firefox52 --- fixed

People

(Reporter: petr.sumbera, Assigned: jgilbert)

Details

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (X11; SunOS i86pc; rv:45.0) Gecko/20100101 Firefox/45.0 Build ID: 20161020232743 Steps to reproduce: There is following name collision on Solaris: grep 'DS' /usr/include/sys/regset.h #define DS 3 And Firefox in dom/canvas/WebGLFormats.h enum class UnsizedFormat : uint8_t { .. D, S, DS, }; Using something other than DS would solve the problem.
Attached patch Bug1315686.patchSplinter Review
Attachment #8808202 - Flags: review?(dolske)
Component: Untriaged → Canvas: WebGL
Product: Firefox → Core
Attachment #8808202 - Flags: review?(dolske) → review?(jgilbert)
What does "possible" mean here? The compiler should cleanly generate errors if this happened, I believe.
Flags: needinfo?(petr.sumbera)
The build on Solaris "always" fails because of this. The "possible" was meant that beside Solaris there still may be some other OS with the same problem (though Linux/BSD/Mac are probably OK). If you think, I can change bug synopsis to: Name collision in UnsizedFormat enum class on Solaris
Flags: needinfo?(petr.sumbera)
Comment on attachment 8808202 [details] [diff] [review] Bug1315686.patch Review of attachment 8808202 [details] [diff] [review]: ----------------------------------------------------------------- ::: dom/canvas/WebGLFormats.h @@ +158,4 @@ > A, > D, > S, > + DEPTH_STENCIL, Add // `DS` is a macro on Solaris.
Attachment #8808202 - Flags: review?(jgilbert) → review+
Assignee: nobody → jgilbert
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
This is a small enough change that we can just take it. I'll take care of it from here.
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/142d256dc5f3 Rename DS to avoid macro conflict on Solaris. - r=jgilbert
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Attached patch Bug1423174.patch (obsolete) — Splinter Review
Attachment #8934495 - Flags: review?(jgilbert)
Comment on attachment 8934495 [details] [diff] [review] Bug1423174.patch Sorry. Wrong bug...
Attachment #8934495 - Flags: review?(jgilbert)
Attachment #8934495 - Attachment is obsolete: true
Comment on attachment 8808202 [details] [diff] [review] Bug1315686.patch Review of attachment 8808202 [details] [diff] [review]: ----------------------------------------------------------------- ::: dom/canvas/WebGLFormats.h @@ +158,4 @@ > A, > D, > S, > + DEPTH_STENCIL, Also please make this D_S
Oh, this is from forever ago. Disregard!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: