Bug 1315686 - Rename DS to avoid macro conflict on Solaris. - r=jgilbert

MozReview-Commit-ID: 7rLiD8Ux9VN